@@ -14,7 +14,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.12'
+generated_by: 'Module::Install version 1.16'
 license: bsd
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -39,4 +39,4 @@ resources:
   homepage: https://github.com/tupinek/Person-ID-CZ-RC-Generator
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Person-ID-CZ-RC-Generator
-version: 0.05
+version: '0.05'
