@@ -1,5 +1,6 @@
 0.05
  - Remove diacritics from author name in Makefile.PL.
+ - Update Module::Install to 1.16 version.
 
 0.04 2014-10-02T06:42:02+02:00
  - Add tests.
